# 2023_UWR

./: .gitignore  data.csv
Analysis/: Align_script.ipynb  camera_analysis.ipynb  fls_time_stamp.ipynb  kf_analysis.ipynb  kf_analysis_clean.ipynb
Analysis/.ipynb_checkpoints/: kf_analysis_clean-checkpoint.ipynb
DoE - LumaX/: pingscript_linux.py  pingscript_windows.py
arduino_script/Example17_NTRIPClient_With_GGA_Callback/: Example17_NTRIPClient_With_GGA_Callback.ino  secrets.h
arduino_script/Sensor_inputs_UWR_v1_ros/: Sensor_inputs_UWR_v1_ros.ino
arduino_script/ping1d_simple_mega/: ping1d_simple_mega.ino
arduino_script/ros_lib/logger/: Motor.h
arduino_script/ros_lib/sonar/: Sonar.h  ThreeSonarDepth.h  TwoSonar.h  TwoSonarDepth.h
arduino_script/ros_lib/stepper_motor_control/: comms1.h
arduino_script/ros_lib/uwr_comms/: comms1.h
arduino_script/stepper_speedControl_ros/stepper_ros/: pubsub.pde
devel/: .catkin
devel/include/sonar/: Sonar.h
kalman_filter/: CMakeLists.txt
kalman_filter/rqt/: kalman.perspective
kalman_filter/rviz/: kalman.perspective  kalman.rviz
kalman_filter/src/: kalman_filter_6dof.cpp  sonar_processing.cpp
ros_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/install/: setup.sh
ros_ws/src/stepper_motor_control/: CMakeLists.txt  package.xml
ros_ws/src/stepper_motor_control/src/: Stepper_control.py
ros_ws/src/stepper_motor_control/srv/: comms1.srv
ros_ws/src/uwr_comms/: CMakeLists.txt  package.xml
ros_ws/src/uwr_comms/src/: server_script.py
ros_ws/src/uwr_comms/srv/: comms1.srv
(+314 files in other folders)
